Add some grafana metrics, add expiredJwtException handler in filter